--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,7 +52,7 @@ html, body {
   align-items: center;
   position: relative;
 }
-.wrapper:before {
+/*.wrapper:before {
  content: "";
  display: block;
  position: fixed;
@@ -69,7 +69,7 @@ html, body {
  background-position: center;
  background-repeat: no-repeat;
  z-index: 1;
-}
+}*/
 .header {
   width: 100%;
   background-repeat: no-repeat;
@@ -312,8 +312,7 @@ html, body {
   margin-top: 3.33rem; 
 } 
 .form-search {
-  vertical-align: middle;
-  width: 100%;
+  display: flex;
 }
 .search-field, .search-hidden, .hide-email {
   width: 1px;
@@ -322,19 +321,18 @@ html, body {
   position: absolute; 
 }
 .input-search {
-  padding: 1.33rem 2.33rem 1.33rem 1.33rem; 
+  padding: 1.33rem 5.33rem 1.33rem 1.33rem;
   font-size: 0.87rem;
   color: #000000;
   border: none;
   background-color: #f4f7f6;
-  min-width: 77%;
+  width: 100%;
 }
 .button-search::before {
   content: "";
   display: inline-block;
-  width: 2.33rem;
-  height: 2.33rem;
-  padding: 7px;
+  width: 3.33rem;
+  height: 3.33rem;
   background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/search.svg);
   background-repeat: no-repeat;
   background-size: 1.3rem;
